# hopper

./: Cargo.toml  Dockerfile  I18N.md  README.md  dev-server.sh
etc/: webfinger.json
i18n/en-us/: errors.ftl
src/: cache.rs  config.rs  errors.rs  i18n.rs  lib.rs  model.rs  webfinger.rs  webhostmeta.rs
src/http/: context.rs  handle_index.rs  handle_policy.rs  handle_spec.rs  middleware_i18n.rs  mod.rs  server.rs
static/: hopper-firefox-updates.json
templates/: alert.en-us.bare.html  alert.en-us.html  base.en-us.html  footer.en-us.html  footer.es.html  index.en-us.html  index.en-us.partial.html  index.es.bare.html  policy.en-us.html  spec.en-us.html
